--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,20 @@
 
-name = "emscripten-template"
+name = "mastercard-backbank"
 type = "webpack"
-zone_id = ""
-account_id = ""
-route = ""
+zone_id = "c30033984b7be7d945e5fdaf293c6220"
+account_id = "9ddca7c9df604668fc6d14f079b2f066"
+main = "build/worker/shim.mjs"
+
 workers_dev = true
 webpack_config = "webpack.config.js"
+
+kv_namespaces = [
+  {binding="backbank",id="e4609a2b6fa943aab9e44185293dae3a"}
+]
+
+[env.production]
+name = "mastercard-backbank"
+route = { pattern = "https://vault-co.in*", zone_id = "c30033984b7be7d945e5fdaf293c6220" }
+
+[build]
+command = "worker-build --release" 
