--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
-
 {
-    "name": "mastercard-backbank-libnode",
-    "version": "1.0.0",
-    "description": "libnode with cloudflare service worker-emscripten-template",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "format": "prettier --write '**/*.{js,css,json,md}'"
-    },
+  "name": "mastercard-backbank-libnode",
+  "version": "1.0.0",
+  "description": "libnode with cloudflare service worker-emscripten-template",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write '**/*.{js,css,json,md}'"
+  },
+  "author": "Nick Carducci nmcarducci@gmail.com",
+  "license": "",
+  "devDependencies": {
+    "copy-webpack-plugin": "^5.0.3",
+    "exports-loader": "^0.7.0",
+    "shelljs": "^0.8.3"
+  },
+  "false": {
     "prettier": {
       "singleQuote": true,
       "semi": false,
       "tabWidth": 2,
       "trailingComma": "all",
       "printWidth": 80
-    },
-    "author": "{{ authors }}",
-    "license": "MIT",
-    "devDependencies": {
-      "copy-webpack-plugin": "^5.0.3",
-      "exports-loader": "^0.7.0",
-      "shelljs": "^0.8.3"
     }
   }
+}
